--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "three": "^0.98.0",
     "three-orbit-controls": "^82.1.0",
     "topojson": "^3.0.2",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "vanilla-lazyload": "^8.17.0",
     "vee-validate": "^2.1.2",
     "vue": "^2.5.11",
@@ -52,7 +53,7 @@
     "webpack": "^4.25.1",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.11"
   },
   "browserslist": [
     "> 1%",
