--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --mode=development --hide-modules --watch --trace-sync-io",
     "build": "cross-env NODE_ENV=production webpack --mode=production --hide-modules",
-    "local": "babel-node ./index.js"
+    "start": "babel-node ./index.js"
   },
   "dependencies": {
     "connect-history-api-fallback": "^1.5.0",
