--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack --mode=development --hide-modules --watch --trace-sync-io",
-    "build": "cross-env NODE_ENV=production webpack --mode=production --hide-modules",
-    "start": "babel-node ./index.js"
+    "dev-vue": "cross-env NODE_ENV=development webpack --mode=development --hide-modules --watch --trace-sync-io",
+    "dev-server": "babel-node ./server/main.js",
+    
+    "build-frontend": "cross-env NODE_ENV=production webpack --mode=production --hide-modules",
+    "build-server": "babel -d ./build ./server --copy-files",
+    "start": "cross-env NODE_ENV=production node ./build/main.js"
   },
   "dependencies": {
     "connect-history-api-fallback": "^1.5.0",
