--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "node ./build/main.js"
   },
   "dependencies": {
+    "compression": "^1.7.3",
     "connect-history-api-fallback": "^1.5.0",
     "cookie-parser": "^1.4.3",
     "cross-env": "^5.0.5",
@@ -43,7 +44,7 @@
     "@babel/node": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.1.5",
-    "babel-loader": "^8.0.4",    
+    "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
     "file-loader": "^1.1.4",
     "mini-css-extract-plugin": "^0.4.4",
